// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Right Sidebar Should apply the correct visibility styles and classes when rightSidebarToggle is false 1`] = `
<pf-layout-wrapper-right-sidebar
  rightSidebarToggle="false"
>
  <div
    class="right-sidebar-dock"
  >
    
    
    <i
      class="fa fa-plus fa-lg open-sidebar-icon"
      id="openSidebarIcon"
      style="visibility: visible;"
    />
    
    
    <div
      class="right-sidebar-content right-sidebar-close"
      id="rightSidebarTransitionWrapper"
      ng-reflect-klass="right-sidebar-content"
      ng-reflect-ng-class="[object Object]"
    >
      
      
      <div
        class="sidebar-width d-none"
        id="rightSidebarContentWrapper"
      >
        
        
        <i
          class="fa fa-times fa-lg close-sidebar-icon p-2"
          id="closeSidebarIcon"
          style="visibility: hidden;"
        />
        
        
        
      
      </div>
      
    
    </div>
    
  
  </div>
  
</pf-layout-wrapper-right-sidebar>
`;

exports[`Right Sidebar Should apply the correct visibility styles and classes when rightSidebarToggle is true 1`] = `
<pf-layout-wrapper-right-sidebar
  rightSidebarToggle={[Function Boolean]}
>
  <div
    class="right-sidebar-dock"
  >
    
    
    <i
      class="fa fa-plus fa-lg open-sidebar-icon"
      id="openSidebarIcon"
      style="visibility: hidden;"
    />
    
    
    <div
      class="right-sidebar-content right-sidebar-open"
      id="rightSidebarTransitionWrapper"
      ng-reflect-klass="right-sidebar-content"
      ng-reflect-ng-class="[object Object]"
    >
      
      
      <div
        class="sidebar-width"
        id="rightSidebarContentWrapper"
      >
        
        
        <i
          class="fa fa-times fa-lg close-sidebar-icon p-2"
          id="closeSidebarIcon"
          style="visibility: visible;"
        />
        
        
        
      
      </div>
      
    
    </div>
    
  
  </div>
  
</pf-layout-wrapper-right-sidebar>
`;

exports[`Right Sidebar should transclude 1`] = `
<ng-component>
  
      <pf-layout-wrapper-right-sidebar>
    <div
      class="right-sidebar-dock"
    >
      
    
      <i
        class="fa fa-plus fa-lg open-sidebar-icon"
        id="openSidebarIcon"
      />
      
    
      <div
        class="right-sidebar-content"
        id="rightSidebarTransitionWrapper"
      >
        
      
        <div
          class="sidebar-width"
          id="rightSidebarContentWrapper"
        >
          
        
          <i
            class="fa fa-times fa-lg close-sidebar-icon p-2"
            id="closeSidebarIcon"
          />
          
        
          
        Transclusion Works!
      
          
      
        </div>
        
    
      </div>
      
  
    </div>
    
  
  </pf-layout-wrapper-right-sidebar>
</ng-component>
`;
